Wed Nov  6 21:16:51 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_shift_m): use RARRAY_PTR_USE() without WB because
	  there are not new relations.

Wed Nov  6 21:05:20 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_reverse): use RARRAY_PTR_USE().

Wed Nov  6 19:30:44 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* common.mk (help): add texts about gcbench.

Wed Nov  6 16:32:32 2013  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/open3.rb: tweaked grammar in comments

Wed Nov  6 11:46:36 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_sample): use RARRAY_AREF() and RARRAY_PTR_USE()
	  instead of RARRAY_PTR().

Wed Nov  6 10:37:07 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_and): defer hash creation and some refactoring.

Wed Nov  6 09:14:31 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_gc_short_lived.rb: added.
	  These GC benchmarks do not reflect practical applications.
	  They are only for tuning.

	* benchmark/bm_vm1_gc_short_with_complex_long.rb: added.

	* benchmark/bm_vm1_gc_short_with_long.rb: added.

	* benchmark/bm_vm1_gc_short_with_symbol.rb: added.

	* benchmark/bm_vm1_gc_wb_ary.rb: added.

	* benchmark/bm_vm1_gc_wb_obj.rb: added.

	* benchmark/bm_vm_thread_queue.rb: added.
	  Thie benchmark is added to know how fast C verion of thread.so.

Wed Nov  6 09:13:32 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: define RGENGC_ESTIMATE_OLDSPACE == 0 if USE_RGENGC is 0.

Wed Nov  6 07:13:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (Init_GC): add GC::OPTS to show options.

Wed Nov  6 07:12:17 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: add some options to make quiet.

Wed Nov  6 04:14:25 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: process merge keys before
	  reviving objects. Fixes GH psych #168
	* test/psych/test_merge_keys.rb: test for change